# SitnikovSolver

./: .gitignore  README.md  SitnikovModule.py  TestSitnikovModule.py  sitnikov.cpp  test.txt
AL/: SitnikovModels.py  SitnikovNN_Al.py  SitnikovNN_Al_WithSimulations.py  SitnikovNN_NoAL.py  SitnikovNN_NoAL_withDataSet.py
AL/CIFAR10/: AL.py  Test.py
AL/SitnikovProblem/: RunNNs.py  RunNNs_WithSimulations.py  SitnikovModule.py  SitnikovNN_Al.py  SitnikovNN_Al_WithSimulations.py  SitnikovNN_NoAL.py
AL/SitnikovProblem/Utils/: SelectSims.py  SitnikovModels.py  data.npy
SitnikovCpp/: CMakeLists.txt  Commands.txt  bindings.cpp
SitnikovCpp/bindings/windows/: PySitnikov.lib
bindings/windows/: PySitnikov.cp310-win_amd64.pyd  PySitnikov.exp
